[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Textures/Dark Grey.PNG" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Textures/Light Green.PNG" type="Texture" id=3]
[ext_resource path="res://assets/Textures/Dark Green.PNG" type="Texture" id=4]
[ext_resource path="res://src/script/pauseMenu.gd" type="Script" id=5]
[ext_resource path="res://src/scene/SFX.tscn" type="PackedScene" id=6]

[node name="pauseMenu" type="Control"]
margin_left = 780.0
margin_right = 1780.0
margin_bottom = 1500.0
rect_min_size = Vector2( 1000, 1500 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 560.0
rect_min_size = Vector2( 960, 1460 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
rect_min_size = Vector2( 960, 1460 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect"]
margin_left = 20.0
margin_top = 20.0
margin_right = 340.0
margin_bottom = 540.0
rect_min_size = Vector2( 320, 520 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/NinePatchRect"]
margin_right = 920.0
margin_bottom = 1420.0
rect_min_size = Vector2( 320, 520 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_right = 920.0
margin_bottom = 125.0
rect_min_size = Vector2( 320, 125 )
custom_fonts/font = ExtResource( 2 )
text = "Game Paused"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 129.0
margin_right = 920.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 50 )

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 183.0
margin_right = 920.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 125 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/NinePatchRect/VBoxContainer/TextureButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 920, 125 )
custom_fonts/font = ExtResource( 2 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 312.0
margin_right = 920.0
margin_bottom = 362.0
rect_min_size = Vector2( 0, 50 )

[node name="btnSettings" type="TextureButton" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 366.0
margin_right = 920.0
margin_bottom = 491.0
rect_min_size = Vector2( 0, 125 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="lblSettings" type="Label" parent="NinePatchRect/NinePatchRect/VBoxContainer/btnSettings"]
margin_right = 920.0
margin_bottom = 50.0
rect_min_size = Vector2( 320, 125 )
custom_fonts/font = ExtResource( 2 )
text = "Game Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 495.0
margin_right = 920.0
margin_bottom = 545.0
rect_min_size = Vector2( 0, 50 )

[node name="btnExit2Menu" type="TextureButton" parent="NinePatchRect/NinePatchRect/VBoxContainer"]
margin_top = 549.0
margin_right = 920.0
margin_bottom = 674.0
rect_min_size = Vector2( 0, 125 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="lblExit2Menu" type="Label" parent="NinePatchRect/NinePatchRect/VBoxContainer/btnExit2Menu"]
margin_right = 920.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 125 )
custom_fonts/font = ExtResource( 2 )
text = "Exit to main menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX-mouseClick" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="NinePatchRect/NinePatchRect/VBoxContainer/btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="NinePatchRect/NinePatchRect/VBoxContainer/btnExit2Menu" to="." method="_on_btnExit2Menu_pressed"]
